Fix baderlab geneset download for Java 11.